# TweetyPy

./: .gitignore  LICENSE  Procfile  README.md  clock.py  pyproject.toml  requirements.txt  setup.py
TweetyPy/: main.py  tweetyPy.py
TweetyPy/stubs/TweetyPy/: tweetyPy.pyi
tests/: test_tweetyPy.py
