[tool.poetry]
name = "tweetypy"
version = "0.1.0"
description = "Machine learning app that can create own tweets and word clouds by learning from user statuses or top trend tweets using Markov chain."
authors = ["SerhiiStets <stets.serhii@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
markovify = "0.9.4"
tweepy = "4.8.0"
apscheduler = ">=3.9.1,<3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"